# demo-tutorial

./: .envrc-example  .gitignore  .ignore  Cargo.toml  Justfile  README.md  activity-sleepy  deployment.toml  dev-deps.txt  flake.nix  obelisk.toml  webhook-tutorial  workflow-tutorial
.github/workflows/: check-verify.yml  check.yml  scheduled-bump-cargo-lock.yml  sync-flake-lock.yml
activity/: step.js
activity-sleepy/: Cargo.toml  README.md
activity-sleepy/src/: lib.rs
activity-sleepy/wit/ext/tutorial_activity-obelisk-ext/: activity-obelisk-ext.wit
activity-sleepy/wit/ext/tutorial_activity-obelisk-schedule/: activity-obelisk-schedule.wit
activity-sleepy/wit/template-fibo_activity/: fibo-activity.wit
activity/activity-sleepy/wit/: impl.wit
fly-agent/: README.md  deployment.toml
fly-agent/webhook/: fly-agent.js
fly-agent/workflow/: agent.js  run.js
rust/: Cargo.toml  deployment.toml  server.toml
rust/activity-sleepy/: Cargo.toml  README.md
rust/activity-sleepy/src/: lib.rs
rust/webhook-tutorial/: Cargo.toml  README.md
rust/workflow-tutorial/src/: lib.rs
scripts/: clippy-check.sh  clippy.sh  dev-deps.sh  e2e.sh  fmt-check.sh  obelisk-generate-extensions.sh  obelisk-generate-wit-extensions.sh  obelisk-generate-wit-support.sh
webhook/: tutorial.js
webhook-tutorial/: Cargo.toml  obelisk.toml
webhook-tutorial/src/: lib.rs
webhook/webhook-tutorial/wit/: impl.wit
workflow/: parallel.js  serial.js
workflow-sleepy/: Cargo.toml
workflow-sleepy/src/: lib.rs
workflow-sleepy/wit/: impl.wit
workflow-sleepy/wit/tutorial_sleepy/: tutorial_sleepy.wit
workflow-tutorial/: Cargo.toml
workflow-tutorial/src/: lib.rs  util.rs
workflow-tutorial/wit/: impl.wit
workflow-tutorial/wit/tutorial_workflow/: tutorial_workflow.wit
workflow/workflow-tutorial/: README.md
workflow/workflow-tutorial/src/: lib.rs
workflow/workflow-tutorial/wit/: impl.wit
(+3 files in other folders)
