[workspace]
members = [
    "activity-sleepy",
    "webhook-tutorial",
    "workflow-tutorial",
    "workflow-sleepy",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Project Developers"]
license = "MIT"
repository = "TBD"
edition = "2024"
rust-version = "1.90.0"

[workspace.dependencies]
anyhow = "1"
wit-bindgen = "0.48.1"
wstd = "0.6.3"

[profile.release]
opt-level = "s"
lto = true
overflow-checks = true

[profile.workflow]
opt-level = "s"
debug = "line-tables-only"
inherits = "release"

[profile.webhook]
inherits = "release"
opt-level = "s"
debug = "line-tables-only"
