[workspace]
members = [
    "activity/activity-sleepy",
    "webhook/webhook-tutorial",
    "workflow/workflow-tutorial",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Project Developers"]
license = "MIT"
repository = "TBD"
edition = "2024"
rust-version = "1.90.0"

[workspace.dependencies]
anyhow = "1"
wit-bindgen = "0.53.1"
wstd = "0.6.5"

[profile.release]
opt-level = "s"
lto = true
overflow-checks = true

[profile.workflow]
opt-level = "s"
debug = "line-tables-only"
inherits = "release"

[profile.webhook]
inherits = "release"
opt-level = "s"
debug = "line-tables-only"
